syntax = "proto3";

package dann;

// Node management service for cluster coordination
service NodeManagementService {
  // Join cluster
  rpc JoinCluster(JoinClusterRequest) returns (JoinClusterResponse);
  
  // Leave cluster
  rpc LeaveCluster(LeaveClusterRequest) returns (LeaveClusterResponse);
  
  // Heartbeat
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  
  // Get cluster nodes
  rpc GetClusterNodes(GetClusterNodesRequest) returns (GetClusterNodesResponse);
  
  // Shard assignment
  rpc AssignShards(AssignShardsRequest) returns (AssignShardsResponse);
  
  // Get shard info
  rpc GetShardInfo(GetShardInfoRequest) returns (GetShardInfoResponse);
  
  // Replicate data
  rpc ReplicateData(ReplicateDataRequest) returns (ReplicateDataResponse);
  
  // Sync data (anti-entropy)
  rpc SyncData(SyncDataRequest) returns (SyncDataResponse);
}

// Node information
message NodeInfo {
  string node_id = 1;
  string address = 2;
  int32 port = 3;
  bool is_active = 4;
  int64_t last_heartbeat = 5;
  repeated int32 shard_ids = 6;
  map<string, string> metadata = 7;
  string version = 8;
  int64_t join_time = 9;
}

// Join cluster request
message JoinClusterRequest {
  NodeInfo node_info = 1;
  repeated string seed_nodes = 2;
}

// Join cluster response
message JoinClusterResponse {
  bool success = 1;
  string error_message = 2;
  repeated NodeInfo cluster_nodes = 3;
  repeated int32 assigned_shards = 4;
}

// Leave cluster request
message LeaveClusterRequest {
  string node_id = 1;
}

// Leave cluster response
message LeaveClusterResponse {
  bool success = 1;
  string error_message = 2;
}

// Heartbeat request
message HeartbeatRequest {
  string node_id = 1;
  int64_t timestamp = 2;
  map<string, string> status = 3;
}

// Heartbeat response
message HeartbeatResponse {
  bool success = 1;
  string error_message = 2;
  int64_t timestamp = 3;
}

// Get cluster nodes request
message GetClusterNodesRequest {
  // Empty request
}

// Get cluster nodes response
message GetClusterNodesResponse {
  bool success = 1;
  string error_message = 2;
  repeated NodeInfo nodes = 3;
}

// Assign shards request
message AssignShardsRequest {
  string node_id = 1;
  repeated int32 shard_ids = 2;
}

// Assign shards response
message AssignShardsResponse {
  bool success = 1;
  string error_message = 2;
}

// Get shard info request
message GetShardInfoRequest {
  int32 shard_id = 1;
}

// Get shard info response
message GetShardInfoResponse {
  bool success = 1;
  string error_message = 2;
  int32 shard_id = 3;
  string assigned_node = 4;
  repeated string replica_nodes = 5;
  int64_t vector_count = 6;
  int64_t size_bytes = 7;
}

// Replicate data request
message ReplicateDataRequest {
  repeated IndexOperation operations = 1;
  string source_node = 2;
  int64_t version = 3;
}

// Replicate data response
message ReplicateDataResponse {
  bool success = 1;
  string error_message = 2;
  repeated string failed_operations = 3;
}

// Index operation for replication
message IndexOperation {
  enum OperationType {
    ADD = 0;
    DELETE = 1;
    UPDATE = 2;
  }
  
  OperationType type = 1;
  int64_t vector_id = 2;
  repeated float vector_data = 3;
  int64_t timestamp = 4;
  int64_t version = 5;
  map<string, string> metadata = 6;
}

// Sync data request
message SyncDataRequest {
  int32 shard_id = 1;
  int64_t from_version = 2;
  string requesting_node = 3;
}

// Sync data response
message SyncDataResponse {
  bool success = 1;
  string error_message = 2;
  repeated IndexOperation operations = 3;
  int64_t latest_version = 4;
}
